<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetectionGames.BetweenGamesActivity"
    android:background="@color/white">

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:text="@string/close_button"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/dark_gray_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="close">
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_welldone"
            app:lottie_autoPlay="true"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:lottie_rawRes="@raw/welldone" />

        <TextView
            android:id="@+id/between_games_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/well_done"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray_blue"
            android:gravity="center"/>

        <TextView
            android:id="@+id/between_games_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:text="@string/between_games_desc"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/between_games_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/let_s_do_it"
                android:textAllCaps="false"
                android:textColor="@color/dark_gray_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/repeat_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_fields"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/repeat_lesson"
                android:textAllCaps="false"
                android:textColor="@color/neon_pink"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>