<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

            <LinearLayout
                android:id="@+id/linear_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_login"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:padding="5dp"
                    app:counterMaxLength="15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editEmailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_login"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true"
                    android:padding="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_fields"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp"
                android:text="@string/remember_me"
                android:buttonTint="@color/neon_pink"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_fields"
                android:layout_marginTop="100dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/dark_gray_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>