<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Tabs.AboutFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_menu_48px"
                app:tint="@color/neon_pink" />

            <ImageButton
                android:id="@+id/logout_button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="fitXY"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_logout_48px"
                app:tint="@color/neon_pink" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/about"
                        android:textColor="@color/dark_gray_blue"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/main_developer"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/dark_gray_blue"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="Aman Gupta"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/dark_gray_blue"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="Designer/content-writer"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/dark_gray_blue"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="Rahul kumar Jha"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/dark_gray_blue"
                    android:textSize="20sp"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/contact"
                        android:textStyle="bold"
                        android:textColor="@color/dark_gray_blue"
                        android:textSize="16sp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="guptaaman679@gmail.com"
                        android:textColor="@color/dark_gray_blue"
                        android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>